[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mycobiome-pipeline"
version = "0.1.0"
description = "Pan-cancer mycobiome multi-agent biomarker discovery pipeline"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lifelines>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mycobiome_agents*"]
